--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@koa/cors": "^2.2.1",
 		"apollo-server-koa": "^1.3.2",
 		"graphql": "^0.11.7",
+		"graphql-playground-middleware-koa": "^1.6.21",
 		"graphql-tools": "^2.18.0",
 		"graphql-type-json": "^0.1.4",
 		"koa": "^2.4.1",
